--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1152,10 +1152,11 @@ fetch(imgurl)
   .then(myBlob => {
   var urlCreator = window.URL || window.webkitURL;
    var imageUrl = urlCreator.createObjectURL(myBlob);
-   const ipfs = window.IpfsHttpClient('https://ipfs.infura.io:5001/api/v0');
-	const created = await ipfs.add(imageUrl);
+   var img = new Image();
+	img.src = imageUrl
 	})
-	
+	const ipfs = window.IpfsHttpClient('https://ipfs.infura.io:5001/api/v0');
+	const created = await ipfs.add(img);
 	
 	console.log(created)
 	//await ipfs.files.write('/hello-world', buffer.Buffer.from('Hello, world!'), {create: true})
