--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1132,7 +1132,7 @@ var account_address = [];
 
 
 
-function image_path(){
+<!-- function image_path(){ -->
 var _image = (async function(){
 	localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
@@ -1146,17 +1146,17 @@ var _image = (async function(){
 	var loan_term = localStorage.getItem("NFT_Token_ID2");
 	//var add1x = localStorage.getItem("mySharedData");
 
-	const imgurl = "https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
-fetch(imgurl)
-  .then(response => response.blob())
-  .then(myBlob => {
-  var urlCreator = window.URL || window.webkitURL;
-   var imageUrl = urlCreator.createObjectURL(myBlob);
-   var img = new Image();
-	img.src = imageUrl
-	})
+	<!-- const imgurl = "https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg" -->
+<!-- fetch(imgurl) -->
+  <!-- .then(response => response.blob()) -->
+  <!-- .then(myBlob => { -->
+  <!-- var urlCreator = window.URL || window.webkitURL; -->
+   <!-- var imageUrl = urlCreator.createObjectURL(myBlob); -->
+   <!-- var img = new Image(); -->
+	<!-- img.src = imageUrl -->
+	<!-- }) -->
 	const ipfs = window.IpfsHttpClient('https://ipfs.infura.io:5001/api/v0');
-	const created = await ipfs.add(img);
+	const created = await ipfs.add(imgurl);
 	
 	console.log(created)
 	//await ipfs.files.write('/hello-world', buffer.Buffer.from('Hello, world!'), {create: true})
