--- a/create_nft_swap_form_polygonx_livev2.html
+++ b/create_nft_swap_form_polygonx_livev2.html
@@ -1132,7 +1132,7 @@ var account_address = [];
 
 
 
-<!-- function image_path(){ -->
+<function image_path(){ -->
 var _image = (async function(){
 	localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
