--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -23,8 +23,10 @@
             var reader = new FileReader();
             reader.onload = function (e) {
 
-                const magic_array_buffer_converted_to_buffer = buffer.Buffer(reader.result); // honestly as a web developer I do not fully appreciate the difference between buffer and arrayBuffer 
-                ipfs.add(magic_array_buffer_converted_to_buffer, (err, result) => {
+                //const magic_array_buffer_converted_to_buffer = buffer.Buffer(reader.result); // honestly as a web developer I do not fully appreciate the difference between buffer and arrayBuffer 
+                const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello world!');
+				
+				ipfs.add(magic_array_buffer_converted_to_buffer, (err, result) => {
                     console.log(err, result);
 
               let ipfsLink = "<a href='https://gateway.ipfs.io/ipfs/" + result[0].hash + "'>gateway.ipfs.io/ipfs/" + result[0].hash + "</a>";
