--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -24,7 +24,7 @@
             reader.onload = function (e) {
 
                 //const magic_array_buffer_converted_to_buffer = buffer.Buffer(reader.result); // honestly as a web developer I do not fully appreciate the difference between buffer and arrayBuffer 
-                const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello world!');
+                const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello cat!');
 				
 				ipfs.add(magic_array_buffer_converted_to_buffer, (err, result) => {
                     console.log(err, result);
