--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -31,7 +31,7 @@
 
               let ipfsLink = "<a href='https://gateway.ipfs.io/ipfs/" + result[0].hash + "'>gateway.ipfs.io/ipfs/" + result[0].hash + "</a>";
               document.getElementById("link").innerHTML = ipfsLink;
-
+			  console.log(ipfs.ls('Qmbej9kWmCQu8qqmHxE1Mm14rHzZnw4PLXvv4YtgEWE9Es'))
                 })
             }
             reader.readAsArrayBuffer(this.files[0]);
