--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -19,12 +19,12 @@
     <script>
         const ipfs = window.IpfsHttpClient('ipfs.infura.io', '5001', { protocol: 'https' });
 
-        $("#upload").on("change", function() {
+        //$("#upload").on("change", function() {
             var reader = new FileReader();
             reader.onload = function (e) {
 
                 //const magic_array_buffer_converted_to_buffer = buffer.Buffer(reader.result); // honestly as a web developer I do not fully appreciate the difference between buffer and arrayBuffer 
-                const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello dog!');
+                const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello doggy!');
 				//ipfs.files.write('/example.jpg', examplePic, { create: true })
 				ipfs.add(magic_array_buffer_converted_to_buffer, {wrapWithDirectory:true}, (err, result) => {
                     console.log(err, result);
@@ -36,7 +36,7 @@
                 })
             }
             reader.readAsArrayBuffer(this.files[0]);
-        })
+        //})
     </script>
 
   </body>
