--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -20,8 +20,8 @@
         const ipfs = window.IpfsHttpClient('ipfs.infura.io', '5001', { protocol: 'https' });
 
         //$("#upload").on("change", function() {
-            var reader = new FileReader();
-            reader.onload = function (e) {
+            //var reader = new FileReader();
+            //reader.onload = function (e) {
 
                 //const magic_array_buffer_converted_to_buffer = buffer.Buffer(reader.result); // honestly as a web developer I do not fully appreciate the difference between buffer and arrayBuffer 
                 const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello doggy!');
@@ -35,7 +35,7 @@
 			  
                 })
             }
-            reader.readAsArrayBuffer(this.files[0]);
+            //reader.readAsArrayBuffer(this.files[0]);
         //})
     </script>
 
