--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -40,7 +40,7 @@
 				const content = ipfs.cat("QmYk44tkd5SB2Wz5hKcudcvkRih3PnBHdeGTmTUx2zsbYp", (err, result) => {
                     console.log(err, result);
 				})
-				console.log(content);
+				console.log(buffer.Buffer(content));
             //}
             //reader.readAsArrayBuffer(this.files[0]);
         //})
