--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -37,7 +37,7 @@
 			  
                 })
 				
-				const content = ipfs.ls("QmYk44tkd5SB2Wz5hKcudcvkRih3PnBHdeGTmTUx2zsbYp", (err, result) => {
+				const content = ipfs.cat("QmYk44tkd5SB2Wz5hKcudcvkRih3PnBHdeGTmTUx2zsbYp", (err, result) => {
                     console.log(err, result);
 				})
 				//const content1 = reader.readAsArrayBuffer(content);
