--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -24,7 +24,8 @@
             //reader.onload = function (e) {
 
                 //const magic_array_buffer_converted_to_buffer = buffer.Buffer(reader.result); // honestly as a web developer I do not fully appreciate the difference between buffer and arrayBuffer 
-                const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello doggy!');
+                //const magic_array_buffer_converted_to_buffer = buffer.Buffer('Hello doggy!');
+				const magic_array_buffer_converted_to_buffer = 'Hello doggy!';
 				//ipfs.files.write('/example.jpg', examplePic, { create: true })
 				ipfs.add(magic_array_buffer_converted_to_buffer, {wrapWithDirectory:true}, (err, result) => {
                     console.log(err, result);
