--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -31,7 +31,7 @@
                     console.log(err, result);
 				//ipfs.add(magic_array_buffer_converted_to_buffer, (err, result) => {
                     //console.log(err, result);
-				ipfs.name.publish("QmYk44tkd5SB2Wz5hKcudcvkRih3PnBHdeGTmTUx2zsbYp", {wrapWithDirectory:true}, (err, result) => {
+				ipfs.name.publish("QmYk44tkd5SB2Wz5hKcudcvkRih3PnBHdeGTmTUx2zsbYp", (err, result) => {
                     console.log(err, result);
 				
               let ipfsLink = "<a href='https://gateway.ipfs.io/ipfs/" + result[0].hash + "'>gateway.ipfs.io/ipfs/" + result[0].hash + "</a>";
