--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -28,7 +28,7 @@
 				//const magic_array_buffer_converted_to_buffer = 'Hello doggy!';
 				//ipfs.files.write('/example.jpg', examplePic, { create: true })
 				//ipfs.add(magic_array_buffer_converted_to_buffer, {wrapWithDirectory:true}, (err, result) => {
-                    console.log(err, result);
+                    //console.log(err, result);
 				ipfs.add(magic_array_buffer_converted_to_buffer, (err, result) => {
                     //console.log(err, result);
 				
