--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -40,7 +40,7 @@
 			  ipfs.object.patch.addLink("QmYk44tkd5SB2Wz5hKcudcvkRih3PnBHdeGTmTUx2zsbYp", {
 				name: 'some-link',
 				size: 10,
-				multihash: result[0].hash
+				multihash: "QmbMpfEZVuiP7kejtGZ4q3ZAkEn1fr6X8ZFAhv68T15HXy"
 				}, (err, newNode) => {
 				if (err) {
 					throw err
