--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -38,9 +38,9 @@
 			  
 			  
 			  ipfs.object.patch.addLink("QmYk44tkd5SB2Wz5hKcudcvkRih3PnBHdeGTmTUx2zsbYp", {
-				name: 'some-link',
-				size: 10,
-				multihash: "QmbMpfEZVuiP7kejtGZ4q3ZAkEn1fr6X8ZFAhv68T15HXy"
+				Name: 'some-link',
+				Tsize: 10,
+				Hash: "QmbMpfEZVuiP7kejtGZ4q3ZAkEn1fr6X8ZFAhv68T15HXy"
 				}, (err, newNode) => {
 				if (err) {
 					throw err
