--- a/IPFS_upload.html
+++ b/IPFS_upload.html
@@ -50,7 +50,7 @@
 				
                 <!-- }) -->
 				
-				const content = ipfs.cat("1a", (err, result) => {
+				const content = ipfs.cat("11111aaaaa", (err, result) => {
                     console.log(err, result);
 				})
 				//const content1 = reader.readAsArrayBuffer(content);
