--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -34,11 +34,25 @@ cursor: pointer;
 }
 
 div {
+padding: 5px;
 border-radius: 25px;
-width: 500px;
-height: 150px;
 border: 2px solid #5F6C6D;
 background-size: auto;
+
+}
+
+div.odd {
+
+height: 50%;
+width: 50%;
+
+
+}
+
+div.even {
+
+height: 50%;
+width: 50%;
 
 }
 
@@ -1145,6 +1159,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'q'+i;
 	ew1Div.appendChild(newDiv);
+	//ew1Div.class = "odd";
 	document.getElementById("q" + i).innerHTML = "  OFFER NO: " + i
 	document.getElementById("q" + i).style = "font-weight: bold;"
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
