--- a/create_nft_swapx_polygon_livev5.html
+++ b/create_nft_swapx_polygon_livev5.html
@@ -1149,13 +1149,13 @@ var display = (async function(){
 	
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var ewDiv = document.createElement('table');
+	<!-- var ewDiv = document.createElement('table'); -->
 	
 	
 	
 	
-	chat.appendChild(ewDiv);
-	ewDiv.id = 'r'+i;
+	<!-- chat.appendChild(ewDiv); -->
+	<!-- ewDiv.id = 'r'+i; -->
 	document.getElementById("r" + i).innerHTML = "  OFFER NO: " + i
 	document.getElementById("r" + i).style = "font-weight: bold;"
 	var ew1Div = document.createElement('table');
