--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1150,7 +1150,7 @@ var display = (async function(){
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
 	var ewDiv = document.createElement('table');
-	//ewDiv.id = 'r'+i;
+	ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
 	var ew1Div = document.createElement('table');
