--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1260,7 +1260,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		ew1Div.appendChild(canvas);
+		ewDiv.appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 			}
 	
