--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1296,7 +1296,7 @@ fetch(imgurl)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	ew1Div.appendChild(newDiv);
-	document.getElementById(ss" + i).outerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
+	document.getElementById("ss" + i).outerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
 	var ew2Div = document.createElement('div');
 	
 	ewDiv.appendChild(ew2Div);
