--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1168,10 +1168,10 @@ var display = (async function(){
 	//console.log(contract_ID1)
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	//console.log(name)
-	var newDiv = document.createElement('div');
+	//var newDiv = document.createElement('div');
 	
 	
-	ewDiv.appendChild(newDiv);
+	//ewDiv.appendChild(newDiv);
 	//document.getElementById("rr" + i + j).innerHTML = "" // "their NFT Contract" + j + ": " + contract_ID1;
 	//var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	//console.log(tokenID)
