--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1153,12 +1153,12 @@ var display = (async function(){
 	ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
-	var ew1Div = document.createElement('div');
-	ewDiv.appendChild(ew1Div);
+	<!-- var ew1Div = document.createElement('div'); -->
+	<!-- ewDiv.appendChild(ew1Div); -->
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
-	var newDiv = document.createElement('div');
-	newDiv.id = 'q'+i;
-	ew1Div.appendChild(newDiv);
+	<!-- var newDiv = document.createElement('div'); -->
+	<!-- newDiv.id = 'q'+i; -->
+	<!-- ew1Div.appendChild(newDiv); -->
 	//ew1Div.class = "odd";
 	document.getElementById("r" + i).innerHTML = "  OFFER NO: " + i
 	document.getElementById("r" + i).style = "font-weight: bold;"
@@ -1180,8 +1180,8 @@ var display = (async function(){
 	
 	//var image = await image_and_name(contract_ID1, tokenID, getImage);
 	//console.log(image);
-	var newDiv = document.createElement('img');
-	newDiv.id = 'rs'+i + j;
+	<!-- var newDiv = document.createElement('img'); -->
+	<!-- newDiv.id = 'rs'+i + j; -->
 	//newDiv.setAttribute('width', '15%');
 	//newDiv.setAttribute('height', '15%');
 	newDiv.loading = "lazy";
