--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1148,11 +1148,11 @@ var display = (async function(){
 	//var chat = document.createElement("box");
 	
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	var container = document.createElement('div')
+	var documentFragment = document.createDocumentFragment();
+	//ewDiv.id = 'r'+i;
 	
-	var ewDiv = document.createElement('div');
-	ewDiv.id = 'r'+i;
-	
-	chat.appendChild(ewDiv);
+	documentFragment.appendChild(container);
 	<!-- var ew1Div = document.createElement('div'); -->
 	<!-- ewDiv.appendChild(ew1Div); -->
 	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
@@ -1260,7 +1260,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		document.getElementById("r" + i).appendChild(canvas);
+		container.appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 			}
 	
@@ -1296,7 +1296,7 @@ fetch(imgurl)
 	<!-- var newDiv = document.createElement('div'); -->
 	<!-- newDiv.id = 'ss'+i; -->
 	<!-- ewDiv.appendChild(newDiv); -->
-	document.getElementById("r" + i).innerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
+	//document.getElementById("r" + i).innerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
 	<!-- var ew2Div = document.createElement('div'); -->
 	
 	<!-- ewDiv.appendChild(ew2Div); -->
@@ -1404,7 +1404,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		document.getElementById("r" + i).appendChild(canvas);
+		container.appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
 			}
 	
@@ -1438,7 +1438,7 @@ fetch(imgurl)
 	newBtn.id = 'a' + i;
 	
 	
-	ewDiv.appendChild(newBtn);
+	container.appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
 	<!-- var newDiv = document.createElement('div'); -->
