--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1148,8 +1148,10 @@ var display = (async function(){
 	//var chat = document.createElement("box");
 	
 	 //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
-	var container = document.createElement('div')
+	
 	var documentFragment = document.createDocumentFragment();
+	
+	var container = document.createElement('div')
 	//ewDiv.id = 'r'+i;
 	
 	documentFragment.appendChild(container);
@@ -1450,6 +1452,7 @@ fetch(imgurl)
 	//document.getElementById("latest_block").innerHTML = latest;
 	//console.log(latest)
 	
+	chat.appendChild(documentFragment);
 	}
 	
 	
