--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1265,9 +1265,10 @@ fetch(imgurl)
         ctx.drawImage(img, 0, 0, width, height);
 		container.appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
+		canvas.remove();
 			}
 	
-   
+		
    //ew1Div.appendChild(canvas1);
   
 })
@@ -1409,6 +1410,7 @@ fetch(imgurl)
         ctx.drawImage(img, 0, 0, width, height);
 		container.appendChild(canvas);
 		return canvas.toDataURL("image/jpeg",0.2);
+		canvas.remove();
 			}
 	
    
